--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://parabthesimpilot.com
 languageCode: en-us
 defaultContentLanguage: en
-title: Aviator's Flight Log Book
+title: Parab the Sim Pilot
 theme: cupper-hugo-theme
 googleAnalytics: UA-123456789-1
 disqusShortname: parab
